[package]
name = "seq-here"
authors = ["Zhixia <zhixiaovo@gmail.com>"]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
keywords = ["bioinformatics", "sequence"]
categories = ["command-line-utilities", "science"]

description = "A fast tool for bio-sequence file processing."
homepage = "https://bio-here.github.io/seq-here/"
documentation = "https://docs.rs/seq-here"
repository = "https://github.com/bio-here/seq-here"


[dependencies]
bio = "2.2.0"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.1.4"
memmap2 = "0.9.5"
rayon = "1.10.0"

[[bin]]
name = "seq-here"
path = "src/main.rs"

[lib]
name = "seq_here"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
strip = "debuginfo"
